target level is 9
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>